<resources>
    <string name="app_name">btl</string>
    <string name="app_txt1">妥善保管助记词至隔离网络的安全地方。</string>
    <string name="app_txt2">请勿将助记词在联网环境下分享和存储，比如邮件、相册、\n社交应用等。</string>
    <string name="app_txt3">手动备份</string>
    <string name="app_txt4">云备份</string>
    <string name="app_txt5">稍后备份</string>
    <string name="app_txt6">验证助记词</string>
    <string name="app_txt7">请根据您备份的助记词，按顺序选择填充</string>
    <string name="app_txt8">导入助记词</string>
    <string name="app_txt9">请根据您备份的助记词，按顺序输入填充</string>
    <string name="app_txt10">输入1-1输入助记词单词，并用空格分隔，输入1-1输入助记词单词，并用空格分隔输入1-1输入助记词单词，并用空格分隔输入1-1输入助记词单词，并用空格分隔输入1-1输入助记词单词，并用空格分隔输入1-1输入助记词单词，并用空格分隔</string>
    <string name="app_txt11">粘贴</string>
    <string name="app_txt12">导入扩展公钥</string>
    <string name="app_txt13">详情</string>
    <string name="app_txt14">这是一条公告</string>
    <string name="app_txt15">钱包列表</string>
    <string name="app_txt16">比特币</string>
    <string name="app_txt17">开通通道</string>
    <string name="app_txt18">出站容量</string>
    <string name="app_txt19">入站容量</string>
    <string name="app_txt20">sats</string>
    <string name="app_txt21">请输入出站容量</string>
    <string name="app_txt22">请输入入站容量</string>
       <string name="app_txt23">手续费</string>
    <string name="app_txt24">旷工费</string>
    <string name="app_txt25">自动计算不用填写</string>
    <string name="app_txt26">确认创建</string>
    <string name="app_txt27">sats</string>
    <string name="app_txt28">TOKEN详情</string>
    <string name="app_txt29">资产余额</string>
    <string name="app_txt30">全部</string>
    <string name="app_txt31">转账</string>
    <string name="app_txt32">收款</string>
    <string name="app_txt33">发行量:</string>
    <string name="app_txt34">发行日期:</string>
    <string name="app_txt35">代币种类:</string>
    <string name="app_txt36">代币详情</string>
    <string name="app_txt37">能否增值:</string>
    <string name="app_txt38">代币简介:</string>
    <string name="app_txt39">链上记录:</string>
    <string name="app_txt40">扫一扫，向我支付</string>
    <string name="app_txt41">收款地址</string>
    <string name="app_txt42">新增地址</string>
    <string name="app_txt43">已复制到剪切板</string>
    <string name="app_txt44">发票</string>
    <string name="app_txt45">LNRUL</string>
    <string name="app_txt46">闪电地址</string>
    <string name="app_txt47">币种</string>
    <string name="app_txt48">金额</string>
    <string name="app_txt49">自动显示不用填写</string>
    <string name="app_txt50">请输入金额</string>
    <string name="app_txt51">附言</string>
    <string name="app_txt52">请输入你的留言 (限制50个字符）</string>
    <string name="app_txt53">创建</string>
    <string name="app_txt54">历史记录</string>
    <string name="app_txt55">状态</string>
    <string name="app_txt56">时间</string>
    <string name="app_txt57">失败</string>
    <string name="app_txt58">等待</string>
    <string name="app_txt59">成功</string>
    <string name="app_txt60">输入地址</string>
    <string name="app_txt61">设置</string>
    <string name="app_txt62">@BITLong.com</string>
    <string name="app_txt63">导出助记词</string>
    <string name="app_txt64">修改密码</string>
    <string name="app_txt65">重置密码</string>
    <string name="app_txt66">Nostr地址</string>
    <string name="app_txt67">钱包详情</string>
    <string name="app_txt68">删除钱包</string>
    <string name="app_txt69">搜索Tapr20、NFT</string>
    <string name="app_txt70"> Tapr20</string>
    <string name="app_txt71">NFT</string>
    <string name="app_txt72">我的关注</string>
    <string name="app_txt73">热门榜</string>
    <string name="app_txt74">全部</string>
    <string name="app_txt75">名称/交易额</string>
    <string name="app_txt76">价格</string>
    <string name="app_txt77">涨跌幅</string>
    <string name="app_txt78">普通 - 子地址</string>
    <string name="app_txt79"> 隔离见证(兼容) - 子地址</string>
    <string name="app_txt80"> 刷新</string>
    <string name="app_txt81"> 地址管理</string>
    <string name="app_txt82"> 比特币生态钱包</string>
    <string name="app_txt83"> 请完成验证</string>
    <string name="app_txt84"> 验证完成</string>
    <string name="app_txt85"> 链上</string>

    <string name="app_wallect">钱包</string>
    <string name="app_btn_sure">确认</string>
    <string name="app_btn_sure_input">确认导入</string>
    <string name="app_txt_input_wallect">导入钱包</string>
    <string name="app_txt_create_wallect">创建钱包</string>
    <string name="app_tapr">Tapr</string>
    <string name="app_noster">Nostr</string>

    <string-array name="options_array">
        <item>text1</item>
        <item>text2</item>
        <item>text3</item>
    </string-array>


</resources>
