<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_txt12"
        android:textColor="@color/color_0000"
        android:textStyle="bold"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ed_key_txt"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white"
        android:hint="@string/app_txt10"
        android:paddingLeft="14dp"
        android:textSize="14sp" />




    <TextView
        android:id="@+id/tv_paste"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:padding="3dp"
        android:gravity="center"
        android:text="@string/app_txt11"
        android:background="@drawable/bg_side_r50_5af0"
        android:layout_gravity="right"
        android:textColor="@color/color_5af0"
        android:textSize="12sp" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp">

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_5af0"
            android:gravity="center"
            android:text="@string/app_btn_sure"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>