<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:layout_alignParentBottom="true"
 >


    <RelativeLayout
        android:id="@+id/rl_out_bount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_txt47"
            android:textColor="@color/color_3838"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"

            android:background="@drawable/bg_f2f2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/app_txt49"
                android:textColor="@color/gray_text_light"
                android:textSize="14dp" />


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_in_bount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_out_bount"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_txt48"
            android:textColor="@color/color_3838"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_side_1width_5af0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_in_bount"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/app_txt50"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_txt20"
                android:textColor="@color/color_5af0"
                android:textSize="14dp" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_absenteeism"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_in_bount"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:text="@string/app_txt51"
            android:textColor="@color/color_3838"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="242dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_side_1width_5af0"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tv_setvice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"

                android:hint="@string/app_txt52"
                android:textColor="@color/gray_text_light"
                android:textSize="14dp" />


        </LinearLayout>


    </RelativeLayout>




</RelativeLayout>