<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible">


        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/app_txt75"
            android:textColor="@color/color_8080"
            android:textSize="13sp" />


        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/app_txt76"
            android:textColor="@color/color_8080"
            android:textSize="13sp" />


        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/app_txt77"
            android:textColor="@color/color_8080"
            android:textSize="13sp" />


    </LinearLayout>


</LinearLayout>