<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_alignParentBottom="true"

    android:background="@drawable/bg_f2f2">


    <RelativeLayout
        android:id="@+id/rl_ed_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

      >


        <LinearLayout
            android:id="@+id/ll_ed_input"
            android:layout_width="wrap_content"
            android:layout_height="40dp"

            android:background="@drawable/bg_d9fa"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tv_input_loction"
                android:layout_width="100dp"
                android:layout_height="match_parent"

                android:background="@null"
                android:hint="@string/app_txt60"

                android:textColor="@color/gray_text_light"
                android:textSize="14dp" />


        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ll_ed_input"
            android:paddingStart="10dp"
            android:text="@string/app_txt62"
            android:textColor="@color/color_3838"
            android:textSize="14sp"
          />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="128dp"
        android:layout_height="35dp"
        android:layout_below="@+id/rl_ed_input"
        android:layout_centerHorizontal="true"
android:paddingVertical="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_5af0"

        android:gravity="center"
        android:text="@string/app_txt61"
        android:textColor="@color/white"
        android:textSize="18sp"
     />

</RelativeLayout>