<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:visibility="visible">



        <TextView
            android:id="@+id/item_tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"

            android:text="@string/app_txt48"
            android:textColor="@color/color_3838"
            android:textSize="14sp"
            />


        <TextView
            android:id="@+id/item_tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_txt55"
            android:textColor="@color/color_3838"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:visibility="gone"
                android:text="0"
                android:textColor="@color/color_3838"
                />

            <TextView
                android:id="@+id/item_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:gravity="center"
                android:text="@string/app_txt56"
                android:textSize="12sp"
                android:textColor="@color/color_3838" />
        </LinearLayout>
    </RelativeLayout>




</LinearLayout>